--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Mocks\MockReceiver.cs" />
     <Compile Include="Collections\WeakMultiTableTest.cs" />
     <Compile Include="TimeTests.cs" />
+    <Compile Include="TimeHandleTests.cs" />
+    <Compile Include="TimeSourceTests.cs" />
     <Compile Include="PeripheralsGroupTests.cs" />
     <Compile Include="GPIODetachingTests.cs" />
     <Compile Include="Mocks\MockGPIOByNumberConnectorPeripheral.cs" />
