[#8793] Added CoreLevelInterruptor controller.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -231,6 +231,7 @@
       <DependentUpon>RegisterEnumParser.tt</DependentUpon>
     </Compile>
     <Compile Include="Peripherals\CPU\Disassembler\DisassemblerAttribtue.cs" />
+    <Compile Include="Peripherals\IRQControllers\CoreLevelInterruptor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
