--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -232,6 +232,7 @@
     </Compile>
     <Compile Include="Peripherals\CPU\Disassembler\DisassemblerAttribtue.cs" />
     <Compile Include="Peripherals\IRQControllers\CoreLevelInterruptor.cs" />
+    <Compile Include="Peripherals\IRQControllers\PlatformLevelInterruptController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
