--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Peripherals\IRQControllers\CoreLevelInterruptor.cs" />
     <Compile Include="Peripherals\IRQControllers\PlatformLevelInterruptController.cs" />
     <Compile Include="Peripherals\Timers\MiV_CoreTimer.cs" />
+    <Compile Include="Peripherals\UART\MiV_CoreUART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
