--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -52,10 +52,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Peripherals\Peripherals.csproj">
-      <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB5}</Project>
-      <Name>Peripherals-TranslationCPU</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Main\Emulator.csproj">
       <Project>{2901AECB-A54F-4FD8-9AC1-033D86DC7257}</Project>
       <Name>Emulator</Name>
@@ -71,6 +67,10 @@
     <ProjectReference Include="..\Extensions\Extensions.csproj">
       <Project>{4C636FAF-4650-4088-8EA8-2FCCC225E9CF}</Project>
       <Name>Extensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Peripherals\Peripherals.csproj">
+      <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB7}</Project>
+      <Name>Peripherals</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
