--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -44,6 +44,7 @@
     <Compile Include="RiscV\RiscVRegisters.cs">
       <DependentUpon>RiscVRegisters.tt</DependentUpon>
     </Compile>
+    <Compile Include="RiscV\CoreLevelInterruptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscVRegisters.tt">
