--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -63,9 +63,6 @@
     <Reference Include="Dynamitey">
       <HintPath>..\..\..\..\..\lib\resources\libraries\Dynamitey.dll</HintPath>
     </Reference>
-    <Reference Include="LZ4n">
-      <HintPath>..\..\..\..\..\lib\resources\libraries\LZ4n.dll</HintPath>
-    </Reference>
     <Reference Include="Nini">
       <HintPath>..\..\..\..\..\lib\resources\libraries\Nini.dll</HintPath>
     </Reference>
@@ -77,6 +74,9 @@
     </Reference>
     <Reference Include="Lucene.Net">
       <HintPath>..\..\..\..\..\lib\resources\libraries\Lucene.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="LZ4">
+      <HintPath>..\..\..\..\..\lib\resources\libraries\LZ4.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
