--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -396,6 +396,9 @@
     <Compile Include="Core\GPIOMultiplexer.cs" />
     <Compile Include="Utilities\AllowAnyNumericalValue.cs" />
     <Compile Include="Peripherals\CPU\RegisterValue.cs" />
+    <Compile Include="Peripherals\Bus\SymbolAddress.cs" />
+    <Compile Include="Peripherals\Bus\ELFExtensions.cs" />
+    <Compile Include="Peripherals\Bus\ISymbolEntryExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
