--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -394,6 +394,7 @@
     <Compile Include="Peripherals\Sensor\IHumiditySensor.cs" />
     <Compile Include="Peripherals\Sensor\ITemperatureSensor.cs" />
     <Compile Include="Core\GPIOMultiplexer.cs" />
+    <Compile Include="Utilities\AllowAnyNumericalValue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
