[#10048] Do not build 64-bit RiscV on Windows&OSX.

--- a/src/Emulator/Cores/cores-riscv64.csproj
+++ b/src/Emulator/Cores/cores-riscv64.csproj
@@ -38,7 +38,18 @@
       <Endianess Include="le" />
     </ItemGroup>
   </Target>
-  <Import Project="./cores.template.csproj" />
+  <!-- Those fake targets and conditional importing of a project should be removed once support for 64-bit is introduced for Windows&OSX -->
+  <Target Name="Clean">
+  </Target>
+  <Target Name="Build">
+  </Target>
+  <Target Name="CompileTranslationLib">
+  </Target>
+  <Target Name="GetTargetPath">
+  </Target>
+  <Target Name="GetCopyToOutputDirectoryItems">
+  </Target>
+  <Import Project="./cores.template.csproj" Condition=" '$(CurrentPlatform)' == 'Linux' "/>
   <ItemGroup>
     <Compile Include="RiscV\RiscV64.cs" />
     <Compile Include="RiscV\RiscV64Registers.cs">
