--- a/src/Emulator/Cores/cores-riscv64.csproj
+++ b/src/Emulator/Cores/cores-riscv64.csproj
@@ -38,7 +38,7 @@
       <Endianess Include="le" />
     </ItemGroup>
   </Target>
-  <!-- Those fake targets and conditional importing of a project should be removed once support for 64-bit is introduced for Windows&OSX -->
+  <!-- Those fake targets and conditional importing of a project should be removed once support for 64-bit is introduced for Windows -->
   <Target Name="Clean">
   </Target>
   <Target Name="Build">
@@ -49,7 +49,7 @@
   </Target>
   <Target Name="GetCopyToOutputDirectoryItems">
   </Target>
-  <Import Project="./cores.template.csproj" Condition=" '$(CurrentPlatform)' == 'Linux' "/>
+  <Import Project="./cores.template.csproj" Condition=" '$(CurrentPlatform)' != 'Windows' "/>
   <ItemGroup>
     <Compile Include="RiscV\RiscV64.cs" />
     <Compile Include="RiscV\RiscV64Registers.cs">
