--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Peripherals\IRQControllers\GaislerMIC.cs" />
     <Compile Include="Peripherals\Timers\GaislerGPTimer.cs" />
     <Compile Include="Peripherals\GPIOPort\GaislerGPIO.cs" />
-    <Compile Include="Peripherals\Network\CadenceGEM.cs" />
+    <Compile Include="Peripherals\Network\ZynqEthernet.cs" />
     <Compile Include="Peripherals\Timers\TegraTimer.cs" />
     <Compile Include="Peripherals\Timers\OMAP_GPTimer.cs" />
     <Compile Include="Peripherals\Timers\STM32_Timer.cs" />
