--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Peripherals\Miscellaneous\SiLabs\EZR32DeviceInformation.cs" />
     <Compile Include="Peripherals\Miscellaneous\SiLabs\DeviceFamily.cs" />
     <Compile Include="Peripherals\Miscellaneous\SiLabs\DeviceInformation.cs" />
+    <Compile Include="Peripherals\Network\CadenceGEM.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
