--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Peripherals\Network\SMC91X.cs" />
     <Compile Include="Peripherals\I2C\XIIC.cs" />
     <Compile Include="Peripherals\I2C\VybridI2C.cs" />
+    <Compile Include="Peripherals\I2C\OpenCoresI2C.cs" />
     <Compile Include="Peripherals\Wireless\EmberRadio.cs" />
     <Compile Include="Peripherals\USB\ISP1761.cs" />
     <Compile Include="Peripherals\Timers\PL031.cs" />
