--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Peripherals\Miscellaneous\Button.cs" />
     <Compile Include="Peripherals\Network\SynopsysEthernetMAC.cs" />
     <Compile Include="Peripherals\SPI\XilinxQSPI.cs" />
+    <Compile Include="Peripherals\SPI\HiFive_SPI.cs" />
     <Compile Include="Peripherals\IRQControllers\MSCM.cs" />
     <Compile Include="Peripherals\Miscellaneous\SEMA4.cs" />
     <Compile Include="Peripherals\MTD\FSLNAND.cs" />
