[#10824] Add PWM tester.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -399,6 +399,7 @@
     <Compile Include="Peripherals\Bus\ELFExtensions.cs" />
     <Compile Include="Peripherals\Bus\ISymbolEntryExtensions.cs" />
     <Compile Include="Utilities\DisposableWrapper.cs" />
+    <Compile Include="Testing\PWMTester.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
