[DEV] Add mock peripheral with protected constructor.

--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -40,6 +40,7 @@
     <Compile Include="SerializableMappedSegmentTests.cs" />
     <Compile Include="MultiCPUTests.cs" />
     <Compile Include="Mocks\MockCPU.cs" />
+    <Compile Include="Mocks\MockPeripheralWithProtectedConstructor.cs" />
     <Compile Include="Mocks\ActivelyAskingCPU.cs" />
     <Compile Include="Mocks\EmptyCPU.cs" />
     <Compile Include="Mocks\ActivelyAskedPeripheral.cs" />
