--- a/src/Plugins/AdvancedLoggerViewerPlugin/AdvancedLoggerViewerPlugin.csproj
+++ b/src/Plugins/AdvancedLoggerViewerPlugin/AdvancedLoggerViewerPlugin.csproj
@@ -35,6 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Lucene.Net">
+      <HintPath>..\..\..\..\..\lib\resources\libraries\Lucene.Net.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition=" $(CurrentPlatform) != 'Windows'">
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gtk-sharp-2.0</Package>
     </Reference>
@@ -43,9 +48,6 @@
     </Reference>
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gtk-sharp-2.0</Package>
-    </Reference>
-    <Reference Include="Lucene.Net">
-      <HintPath>..\..\..\..\..\lib\resources\libraries\Lucene.Net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
