--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -36,13 +36,15 @@
   <ItemGroup>
     <Reference Include="PresentationFramework" Condition=" $(CurrentPlatform) == 'Windows'" />
     <Reference Include="System" />
-    <Reference Include="Mono.Posix" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Package>glib-sharp-2.0</Package>
-    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition=" $(CurrentPlatform) != 'Windows'">
+    <Reference Include="Mono.Posix" />
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gtk-sharp-2.0</Package>
+    </Reference>
+    <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+      <Package>glib-sharp-2.0</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +66,8 @@
     <Compile Include="ConsoleBackendAnalyzers/TerminalAppProvider.cs" />
     <Compile Include="ConsoleBackendAnalyzers/WindowPositionProvider.cs" />
     <Compile Include="ConsoleBackendAnalyzers/ProcessBasedProvider.cs" />
+  </ItemGroup>
+  <ItemGroup Condition=" $(CurrentPlatform) != 'Windows'">
     <Compile Include="VideoAnalyzer/FrameBufferDisplayWidget.cs" />
     <Compile Include="VideoAnalyzer/DisplayMode.cs" />
     <Compile Include="VideoAnalyzer/BitmapImageExtensions.cs" />
