--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Peripherals\Miscellaneous\SiLabs\DeviceInformation.cs" />
     <Compile Include="Peripherals\Network\CadenceGEM.cs" />
     <Compile Include="Peripherals\GPIOPort\PSE_GPIO.cs" />
+    <Compile Include="Peripherals\MTD\PSE_eNVM.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
