--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Peripherals\GPIOPort\PSE_GPIO.cs" />
     <Compile Include="Peripherals\MTD\PSE_eNVM.cs" />
     <Compile Include="Peripherals\SPI\PSE_SPI.cs" />
+    <Compile Include="Peripherals\Timers\PSE_Timer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
