[#10834] Add basic PCIe infrastructure.
This is incompatible with previous PCI implementations.
This is, however, generally compatible with the PCI standard.

Previous PCI solutions will be eventually removed, and these interfaces
and classes will be renamed to include PCI explicitly.

This interface is not complete.

At the moment we support double word accesses. More fine grained
accesses can be done via translations on a controller level.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -72,7 +72,7 @@
       <HintPath>..\..\..\..\..\lib\resources\libraries\LZ4.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup Condition=" $(CurrentPlatform) != 'Windows'">
+  <ItemGroup Condition="$(CurrentPlatform) != 'Windows'">
     <Reference Include="Mono.Posix" />
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gdk-sharp-2.0</Package>
@@ -118,6 +118,15 @@
     <Compile Include="Core\Machine.cs" />
     <Compile Include="Peripherals\Bus\IBusPeripheral.cs" />
     <Compile Include="Peripherals\PCI\IPCIPeripheral.cs" />
+    <Compile Include="Peripherals\PCI\IPCIePeripheral.cs" />
+    <Compile Include="Peripherals\PCI\IPCIeRouter.cs" />
+    <Compile Include="Peripherals\PCI\PCIeSpace.cs" />
+    <Compile Include="Peripherals\PCI\HeaderType.cs" />
+    <Compile Include="Peripherals\PCI\Capabilities\Capability.cs" />
+    <Compile Include="Peripherals\PCI\Capabilities\PCIeCapability.cs" />
+    <Compile Include="Peripherals\PCI\BAR\BaseAddressRegister.cs" />
+    <Compile Include="Peripherals\PCI\BAR\MemoryBaseAddressRegister.cs" />
+    <Compile Include="Peripherals\PCI\BAR\IOBaseAddressRegister.cs" />
     <Compile Include="Peripherals\CPU\CPURegistrationPoint.cs" />
     <Compile Include="Core\Structure\Registered.cs" />
     <Compile Include="Peripherals\IEmulationElement.cs" />
