--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Peripherals\USB\PortStatusAndControlRegisterChanges.cs" />
     <Compile Include="Peripherals\PCI\VersatilePCI.cs" />
     <Compile Include="Peripherals\PCI\PSE_PCIe.cs" />
+    <Compile Include="Peripherals\PCI\PCIeMemory.cs" />
     <Compile Include="Peripherals\SPI\FakeEfmSPITransmitter.cs" />
     <Compile Include="Peripherals\UART\LEUART.cs" />
     <Compile Include="Peripherals\USB\MassStorage.cs" />
