[#10834] Add a stub PCIe root complex peripheral.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Peripherals\PCI\IPCIeRouter.cs" />
     <Compile Include="Peripherals\PCI\PCIeBasePeripheral.cs" />
     <Compile Include="Peripherals\PCI\PCIeEndpoint.cs" />
+    <Compile Include="Peripherals\PCI\PCIeRootComplex.cs" />
     <Compile Include="Peripherals\PCI\PCIeBridge.cs" />
     <Compile Include="Peripherals\PCI\PCIeSpace.cs" />
     <Compile Include="Peripherals\PCI\HeaderType.cs" />
