[#12133] Add basic PicoSoC support.
Add PicoRV32 (no interrupt support yet) and PicoSoC SimpleUART models.

--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="RiscV\RiscV32.cs" />
     <Compile Include="RiscV\VexRiscv.cs" />
+    <Compile Include="RiscV\PicoRV32.cs" />
     <Compile Include="RiscV\RiscV32Registers.cs">
       <DependentUpon>RiscV32Registers.tt</DependentUpon>
     </Compile>
