[#12033] Add `GPIOGate` helper class.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -407,6 +407,7 @@
     <Compile Include="Utilities\DisposableWrapper.cs" />
     <Compile Include="Testing\PWMTester.cs" />
     <Compile Include="Storage\DataStorage.cs" />
+    <Compile Include="Core\GPIOGate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
